--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
+    <!-- css links -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/main.css">
+
     <!-- bootstrap -->
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <main>
         <div class="container">
+            <h1 class="m-3"> Feed The <span> Snake </span> </h1>
             <canvas id="canvas"></canvas>
+            <div class="instructions">
+                <p>
+                    <span>Use <img src="./assets/images/keys.png"> to control</span>
+                    <button onClick="window.location.reload();"> restart </button>
+                </p>
+            </div>
         </div>
     </main>
 
 
-    <script src="./game.js"></script>
+    <script src="./javascripts/game.js"></script>
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
